--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a href="#services" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Testimonials</a>
+                        <a href="#contact" class="nav-link">Testimonials</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
@@ -148,9 +148,9 @@
                 </div>
                 <div>
                     <div class="social-link-list">
-                        <a href="#" class="social-link"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="#contact" class="social-link"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://web.whatsapp.com/send?phone=+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
-                        <a href="#" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard1@gmail.com</a>
+                        <a href="mailto:sabrina.guittard1@gmail.com" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard1@gmail.com</a>
                         <a class="social-link">2 pl. Octave Sage<br />31100 Toulouse, France</a>
                     </div>
                 </div>
