--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a href="#services" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link">Testimonials</a>
+                        <a href="#testimonials" class="nav-link">Testimonials</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
@@ -130,6 +130,8 @@
                         <img src="ressources/image.jpg" alt="about" class="about-image" />
                     </div>
                 </div>
+            </section>
+            <section id="testimonials" class="about-section">
             </section>
             <section id="contact" class="about-hero">
                 <div id="contact_substitute" class="section-content">
