--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 >Contact Us</a
                             >
                             <a href="/ressources/leaflet.pdf" class="button reverse" download
-                                >Resume</a
+                                >Leaflet</a
                             >
                         </div>
                     </div>
