--- a/index.html
+++ b/index.html
@@ -150,10 +150,13 @@
                 </div>
                 <div>
                     <div class="social-link-list">
-                        <a href="#contact" class="social-link"><i class="fa-brands fa-linkedin"></i></a>
+                        <a class="fa-2xs">Copyright © 2025 GrdJL</a>
+                        <a>|</a>
+                        <a href="#contact" class="social-link">@Sab... <i class="fa-brands fa-linkedin"></i></a>
+                        <a>|</a>
                         <a href="https://web.whatsapp.com/send?phone=+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
+                        <a>|</a>
                         <a href="mailto:sabrina.guittard1@gmail.com" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard1@gmail.com</a>
-                        <a class="social-link">2 pl. Octave Sage<br />31100 Toulouse, France</a>
                     </div>
                 </div>
             </section>
