--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li class="nav-item">
                         <a href="#" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
@@ -31,7 +31,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="#testimonials" class="nav-link">Testimonials</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
@@ -41,7 +41,7 @@
         </header>
         <main class="main">
             <!-- Hero section -->
-            <section id="home" class="hero-section">
+            <!--<section id="home" class="hero-section">
                 <div class="section-content">
                     <div class="hero-details">
                         <p class="title"></p>
@@ -79,21 +79,15 @@
                             <u>G</u>lobal <u>R</u>egulatory <u>E</u>thics <u>A</u>pprovals <u>T</u>imely solutions<br />
                         </h1>
                         <div class="buttons">
-                            <a
-                                href="mailto:sabrina.guittard@longfortconsulting.com?subject=Request for information"
-                                class="button"
-                                >Contact Us</a
-                            >
-                            <a href="/ressources/leaflet.pdf" class="button reverse" download
-                                >Leaflet</a
-                            >
+                            <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="button reverse">Contact Us</a>
+                            <a href="/ressources/leaflet.pdf" class="button" download>Leaflet</a>
                         </div>
                     </div>
                     <div class="hero-image-wrapper">
                         <img src="ressources/image2.webp" alt="hero" class="hero-image" />
                     </div>
                 </div>
-            </section>
+            </section>-->
             <!-- About section -->
             <section id="about" class="about-section">
                 <div class="section-content">
@@ -101,18 +95,16 @@
                         <img src="ressources/image.jpg" alt="about" class="about-image" />
                     </div>
                     <div class="about-details">
-                        <h2 class="section-title">About Me</h2>
+                        <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            20 years experienced on clinical trials in oncology, children rare diseases. At Coffee House
-                            in Berndorf, Germany, we pride ourselves on being a go-to destination for coffee lovers and
-                            conversation seekers alike. Wei re dedicated to providing anexceptional coffee experience in
-                            a cozy and inviting atmosphere, where guests can relax, unwind, and enjoy their time in
-                            comfort.
+                            Get benefit from a strong expertise in clinical research on rare diseases, 
+                            oncology, child treatment, gene therapy for your clinical trials
+                            from starting phases to the maintenance.
                         </p>
                     </div>
                 </div>
             </section>
-            <section id="services" class="about-section">
+            <!--<section id="services" class="about-section">
                 <div class="section-content">
                     <div class="hero-details">
                         <h2 class="section-title">Offers</h2>
@@ -127,38 +119,35 @@
                         </p>
                     </div>
                     <div class="about-image-wrapper">
-                        <img src="ressources/image.jpg" alt="about" class="about-image" />
+                        <img src="ressources/image.jpg" alt="about" class="about-image"/>
                     </div>
                 </div>
-            </section>
-            <section id="testimonials" class="about-section">
-            </section>
-            <section id="contact" class="about-hero">
-                <div id="contact_substitute" class="section-content">
-                    <div class="hero-details">
+            </section>-->
+            <section id="contact" class="about-section">
+                <div class="section-content">
+                    <div class="about-details">
                         <h2 class="section-title">Contact</h2>
-                        <p class="text">
-                            20 years experienced on clinical trials in oncology, children rare diseases. At Coffee House
-                            in Berndorf, Germany, we pride ourselves on being a go-to destination for coffee lovers and
-                            conversation seekers alike.
-                        </p>
-                        <p class="description">
-                            Wei re dedicated to providing anexceptional coffee experience in a cozy and inviting
-                            atmosphere, where guests can relax, unwind, and enjoy their time in comfort.
-                        </p>
-                    </div>
-                </div>
-                <div>
-                    <div class="social-link-list">
-                        <a>Copyright © 2025 GrdJL</a>
-                        <a>|</a><a href="#contact" class="social-link">@Sab... <i class="fa-brands fa-linkedin"></i></a>
-                        <a>|</a><a href="https://web.whatsapp.com/send?phone=+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
-                        <a>|</a><a href="mailto:sabrina.guittard1@gmail.com" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard1@gmail.com</a>
-                        <a>|</a><a>2 pl. Octave Sage<br>31100 Toulouse, France</a>
+                        <p class="text">Longfort Consulting<br>2 pl. Octave Sage<br>31100 Toulouse, France</p>
+                        <div class="social-link-list">
+                            <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://web.whatsapp.com/send?phone=+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
+                            <a href="mailto:sabrina.guittard@longfort-consulting.com" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard@longfort-consulting.com</a>
+                        </div>
                     </div>
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <section class="footer-section">
+                <div>
+                    <div class="footer">
+                        <a>Copyright © 2025 Longfort Consulting</a>
+                        <a>|</a>
+                        <a>2 pl. Octave Sage, 31100 Toulouse, France</a>
+                    </div>
+                </div>
+            </section>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
