--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <p class="text">Longfort Consulting<br>2 pl. Octave Sage<br>31100 Toulouse, France</p>
                         <div class="social-link-list">
                             <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://web.whatsapp.com/send?phone=+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
+                            <a href="tel:+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
                             <a href="mailto:sabrina.guittard@longfort-consulting.com" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard@longfort-consulting.com</a>
                         </div>
                     </div>
