--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
             <section class="footer-section">
                 <div>
                     <div class="footer">
-                        <a>Copyright © 2025 Longfort Consulting</a>
+                        <a>Copyright © 2025<br> Longfort Consulting</a>
                         <a>|</a>
-                        <a>2 pl. Octave Sage, 31100 Toulouse, France</a>
+                        <a>2 pl. Octave Sage,<br> 31100 Toulouse, France</a>
                     </div>
                 </div>
             </section>
