--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                             <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard@longfort-consulting.com</a>
                         </div>
                     </div>
+                    <div class="about-image-wrapper">
+                        <img src="ressources/timely.jpg" alt="about" class="about-image" />
+                    </div>
                 </div>
             </section>
         </main>
