--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <section id="about" class="about-section">
                 <div class="section-content">
                     <div class="about-image-wrapper">
-                        <img src="ressources/poings.jpg" alt="about" class="about-image" />
+                        <img src="ressources/image.jpg" alt="about" class="about-image" />
                     </div>
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
