--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="section-content">
                     <div class="about-details">
                         <h2 class="section-title">Contact</h2>
-                        <p class="text">Longfort Consulting<br>2 pl. Octave Sage<br>31100 Toulouse, France</p>
+                        <p class="text">Longfort Consulting<br>Toulouse, France</p>
                         <div class="social-link-list">
                             <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
                             <a href="tel:+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
