--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="footer">
                         <a>Copyright © 2025<br> Longfort Consulting</a>
                         <a>|</a>
-                        <a>2 pl. Octave Sage,<br> 31100 Toulouse, France</a>
+                        <a>Toulouse, France</a>
                     </div>
                 </div>
             </section>
