--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Get benefit from a strong expertise in clinical research on rare diseases, 
-                            oncology, child treatment, gene therapy for your clinical trials
-                            from starting phases to the maintenance.
+                            Get benefit from a strong expertise in clinical research on oncology, immunotherapy, rare diseases, 
+                            child treatment, gene therapy for your clinical trials from starting phases to the maintenance.
                         </p>
                     </div>
                 </div>
