--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
                             Get benefit from a strong expertise in clinical research compliancy toward national & international regulations for your clinical trials (in oncology, immunotherapy, rare diseases, 
-                            child treatment, gene therapy) from starting phases to the maintenance.
+                            child treatment, gene therapy) from the assesment and starting phase, up to the maintenance.
                         </p>
                     </div>
                 </div>
