--- a/index.html
+++ b/index.html
@@ -98,33 +98,31 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Get benefit from a strong expertise in clinical research compliancy toward national & international regulations for your clinical trials (in oncology, immunotherapy, rare diseases, 
-                            child treatment, gene therapy) from the assesment and starting phase, up to the maintenance.
+                            Longfort Consulting in Toulouse offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance. Partner with us for expert guidance and successful trial outcomes.
+                            <!--Get benefit from a strong expertise in clinical research compliancy toward national & international regulations for your clinical trials (in oncology, immunotherapy, rare diseases,
+                            child treatment, gene therapy) from the assesment and starting phase, up to the maintenance.-->
                         </p>
                     </div>
                 </div>
             </section>
-            <!--<section id="services" class="about-section">
+            <section id="services" class="about-section">
                 <div class="section-content">
                     <div class="hero-details">
-                        <h2 class="section-title">Offers</h2>
+                        <h2 class="section-title">Study Design & Protocol Development</h2>
                         <p class="text">
-                            20 years experienced on clinical trials in oncology, children rare diseases. At Coffee House
-                            in Berndorf, Germany, we pride ourselves on being a go-to destination for coffee lovers and
-                            conversation seekers alike.
-                        </p>
-                        <p class="description">
-                            Wei re dedicated to providing anexceptional coffee experience in a cozy and inviting
-                            atmosphere, where guests can relax, unwind, and enjoy their time in comfort.
+                           We help design robust clinical trials with clear protocols to ensure regulatory compliance and scientific validity.
                         </p>
                     </div>
                     <div class="about-image-wrapper">
                         <img src="ressources/image.jpg" alt="about" class="about-image"/>
                     </div>
                 </div>
-            </section>-->
+            </section>
             <section id="contact" class="about-section">
                 <div class="section-content">
+                    <div class="about-image-wrapper">
+                        <img src="ressources/timely.jpg" alt="about" class="about-image" />
+                    </div>
                     <div class="about-details">
                         <h2 class="section-title">Contact</h2>
                         <p class="text">Longfort Consulting<br>Toulouse, France</p>
@@ -134,9 +132,7 @@
                             <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard@longfort-consulting.com</a>
                         </div>
                     </div>
-                    <div class="about-image-wrapper">
-                        <img src="ressources/timely.jpg" alt="about" class="about-image" />
-                    </div>
+
                 </div>
             </section>
         </main>
@@ -154,10 +150,3 @@
         <script src="script.js"></script>
     </body>
 </html>
-
-<!-- 
-        /*   https://www.youtube.com/watch?v=MYFgtnKMDp4&t=521s 
-        *                     à 
-        *                   32'15"                            */
-
--->
