--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         </p>
                     </div>
                     <div class="about-image-wrapper">
-                        <img src="ressources/image.jpg" alt="about" class="about-image"/>
+                        <img src="ressources/bechers.jpg" alt="about" class="about-image"/>
                     </div>
                 </div>
             </section>
