--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="hero-details">
                         <h2 class="section-title">Study Design & Protocol Development</h2>
                         <p class="text">
-                           We help design robust clinical trials with clear protocols to ensure regulatory compliance and scientific validity.
+                           Designing robust clinical trials with clear protocols to ensure regulatory compliance and scientific validity.
                         </p>
                     </div>
                     <div class="about-image-wrapper">
