--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Longfort Consulting in Toulouse offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance. Partner with us for expert guidance and successful trial outcomes.
-                            <!--Get benefit from a strong expertise in clinical research compliancy toward national & international regulations for your clinical trials (in oncology, immunotherapy, rare diseases,
-                            child treatment, gene therapy) from the assesment and starting phase, up to the maintenance.-->
+                            Longfort Consulting offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance. Partner with us for expert guidance in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains and successful trial outcomes.
                         </p>
                     </div>
                 </div>
@@ -110,7 +108,7 @@
                     <div class="hero-details">
                         <h2 class="section-title">Study Design & Protocol Development</h2>
                         <p class="text">
-                           Designing robust clinical trials with clear protocols to ensure regulatory compliance and scientific validity.
+                           Designing robust clinical trials with clear protocols to ensure international regulatory compliance and scientific validity.
                         </p>
                     </div>
                     <div class="about-image-wrapper">
