--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </section>
             <section id="services" class="about-section">
                 <div class="section-content">
-                    <div class="hero-details">
+                    <div class="about-details">
                         <h2 class="section-title">Study Design & Protocol Development</h2>
                         <p class="text">
                            Designing robust clinical trials with clear protocols to ensure international regulatory compliance and scientific validity.
