--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="color-scheme" content="only light">
         <title>Longfort Consulting | Clinical trial advisor</title>
+        <meta name="keywords" content="Oncologie, Thérapie Génique, Recherche clinique, Clinical trial, Oncology, Gene therapy, Regulatory, Essai clinique,
+            Clinical research, Health, ansm, Santé, Agence nationale de sécurité du médicament, Longfort, Longfort-Consulting, Sabrina Guittard" >
+        <meta name="description" content="Longfort Consulting offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance.
+            Partner with us for expert guidance in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains and successful trial outcomes." >
         <!-- linking font awesome for icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
         <link rel="stylesheet" href="style.css" />
