--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
                             Longfort Consulting offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance. Partner with us for expert guidance in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains and successful trial outcomes.
+                        <a href="#services" class="about-section"><br><br>Learn More<br>&#8595;</a>
                         </p>
                     </div>
                 </div>
