--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Longfort Consulting offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance. Partner with us for expert guidance in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains and successful trial outcomes.
+                            Longfort Consulting offers specialized clinical trial consulting to streamline
+                            your research and ensure regulatory compliance. Partner with us for expert guidance
+                            in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
+                            and successful trial outcomes.
                         <a href="#services" class="about-section"><br><br>Learn More<br>&#8595;</a>
                         </p>
                     </div>
@@ -65,8 +68,14 @@
                     <div class="about-details">
                         <h2 class="section-title">Study Design & Protocol Development</h2>
                         <p class="text">
-                           Designing robust clinical trials with clear protocols to ensure international regulatory compliance and scientific validity.
+                           Designing robust clinical trials with clear protocols to ensure international
+                            regulatory compliance and scientific validity.
                         </p>
+                        <br>
+                            <span><a>&#x2705; time</a><br>
+                            <a>&#x2705; cost</a><br>
+                            <a>&#x2705; quality</a>
+                            </span>
                     </div>
                     <div class="about-image-wrapper">
                         <img src="ressources/bechers.jpg" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
@@ -95,9 +104,13 @@
             <section class="footer-section">
                 <div>
                     <div class="footer">
+                        <a href="LegalNotice.html">Informations légales</a>
+                        <a>|</a>
                         <a>Copyright © 2025<br> Longfort Consulting</a>
                         <a>|</a>
                         <a>Toulouse, France</a>
+                        <a>|</a>
+                        <a>Cookie-free</a>
                     </div>
                 </div>
             </section>
