--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <p class="text">
-        <a href="#services" class="about-section"><br>&#8592; Back</a>
+        <a href="index.html" class="about-section"><br>&#8592; Back</a>
         </p>
         <section class="about-section">
         <div class="section-content">
