--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <p class="text">
-        <a href="index.html" class="about-section"><br>&#8592; Back</a>
-        </p>
-        <section class="about-section">
+    <section style="padding: 24px 24px 24px 24px;text-transform: uppercase;font-size: 2rem;">
+        <a href="index.html" class="section-title"> &#129120; Back</a>
+    </section>
+    <section class="about-section">
         <div class="section-content">
             <div class="about-details">
                 <h2 class="section-title">Informations légales:</h2>
@@ -60,6 +60,5 @@
             </div>
         </div>
     </section>
-    <!--<img src=LegalNotice/Modele-de-mentions-legales.webp>-->
     </body>
 </html>
