--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             your research and ensure regulatory compliance. Partner with us for expert guidance
                             in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
                             and successful trial outcomes.
-                        <a href="#services" class="about-section"><br><br>Learn More<br>&#8595;</a>
+                        <a href="#services" class="about-section"><br><br>Learn More<br>&#129123;</a>
                         </p>
                     </div>
                 </div>
@@ -72,9 +72,36 @@
                             regulatory compliance and scientific validity.
                         </p>
                         <br>
-                            <span><a>&#x2705; time</a><br>
-                            <a>&#x2705; cost</a><br>
-                            <a>&#x2705; quality</a>
+                            <span>
+                                <a>&#x2705; time</a> 
+                                <br>
+                                <a>&#x2705; cost</a>
+                                <br>
+                                <a>&#x2705; quality</a> <!-- https://www.w3schools.com/charsets/ref_utf_misc_symb_arr.asp
+                                <br>
+                                <a>&#11034; zqdsdsqd</a> 
+                                <br>
+                                <a>&#9745; cost</a>
+                                <br>
+                                <a>&#10720; quality</a>
+                                <br>
+                                <a>&#11036; zqdsdsqd</a>                                
+                                <br>
+                                <a>&#11035; time</a>
+                                <br>
+                                <a>&#11048; cost</a>
+                                <br>
+                                <a>&#11046; quality</a>
+                                <br>
+                                <a>&#11088; zqdsdsqd</a>
+                                <br>
+                                <a>&#9312; zqdsdsqd</a>                                
+                                <br>
+                                <a>&#9313; quality</a>
+                                <br>
+                                <a>&#9314; zqdsdsqd</a>
+                                <br>
+                                <a>&#9634; zqdsdsqd</a> -->                               
                             </span>
                     </div>
                     <div class="about-image-wrapper">
@@ -104,13 +131,13 @@
             <section class="footer-section">
                 <div>
                     <div class="footer">
-                        <a href="LegalNotice.html">Informations légales</a>
+                        <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Informations légales</a>
                         <a>|</a>
                         <a>Copyright © 2025<br> Longfort Consulting</a>
                         <a>|</a>
                         <a>Toulouse, France</a>
                         <a>|</a>
-                        <a>Cookie-free</a>
+                        <a>&#127850; Cookie-free</a>
                     </div>
                 </div>
             </section>
