--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             your research and ensure regulatory compliance. Partner with us for expert guidance
                             in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
                             and successful trial outcomes.
-                        <a href="#services" class="about-section"><br><br>Learn More<br>&larr;</a>
+                        <a href="#services" class="about-section"><br><br>Learn More<br>&barr;</a>
                         </p>
                     </div>
                 </div>
@@ -145,5 +145,6 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
