--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                     <div class="footer">
                         <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Informations légales</a>
                         <a>|</a>
-                        <a>Copyright © 2025<br> Longfort Consulting</a>
+                        <a>Copyright ©</a>
                         <a>|</a>
-                        <a>Toulouse, France</a>
+                        <a>Longfort Consulting<br>Toulouse, France</a>
                         <a>|</a>
                         <a>&#127850; Cookie-free</a>
                     </div>
@@ -145,6 +145,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
