--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <section class="footer-section">
                 <div>
                     <div class="footer">
-                        <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Informations légales</a>
+                        <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Privacy Policy</a>
                         <a>|</a>
                         <a>Copyright©</a>
                         <a>|</a>
@@ -145,6 +145,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
