--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
                         <a>Longfort Consulting</a>
                         <a>|</a>
                         <a>&#127850; Cookie-free</a>
+                        <a>|</a>
+                        <a>&#x1F33F; 0.19g CO²/visit</a>
                     </div>
                 </div>
             </section>
@@ -145,6 +147,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
