--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <section class="footer-section">
                 <div>
                     <div class="footer">
-                        <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Privacy Policy | Copyright© | Longfort Consulting | &#127850; Cookie-free | &#x1F33F; 0.19g CO²/visit</a>
+                        <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Privacy Policy</a><a> | Copyright© | Longfort Consulting | &#127850; Cookie-free | &#x1F33F; 0.19g CO²/visit</a>
                     </div>
                 </div>
             </section>
@@ -139,6 +139,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
