--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     </li>
                     <li class="nav-item">
                         <a href="#services" class="nav-link">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#testimonials" class="nav-link">Testimonials</a>
                     </li>-->
+                    <li class="nav-item">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" class="nav-link">Contact an expert</a>
+                    </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
@@ -58,8 +58,13 @@
                             your research and ensure regulatory compliance. Partner with us for expert guidance
                             in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
                             and successful trial outcomes.
-                        <a href="#services" class="about-section"><br><br>Learn More<br>&darr;</a>
+                        </p><span class="buttons">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" class="button">Contact an expert</a>
+                    <!--<a href="" class="button">test</a>-->
+                </span>
+                            <p class="text"><a href="#services" class="about-section"><br><br>Learn More<br>&darr;</a>
                         </p>
+                        
                     </div>
                 </div>
             </section>
@@ -107,6 +112,9 @@
                     <div class="about-image-wrapper">
                         <img src="ressources/bechers.jpg" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
                     </div>
+                    
+                </div>
+                <div class="about-details">
                 </div>
             </section>
             <section id="contact" class="about-section">
