--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="#services" class="nav-link">Services</a>
                     </li>-->
                     <li class="nav-item">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" class="nav-link">Get info</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" class="nav-link">Ask</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
@@ -154,6 +154,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
