--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
                             and successful trial outcomes.
                         </p><span class="buttons">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" class="button">Contact an expert</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" class="button">Ask an expert</a>
                     <!--<a href="" class="button">test</a>-->
                 </span>
                             <p class="text"><a href="#services" class="about-section"><br><br>Learn More<br>&darr;</a>
@@ -154,6 +154,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
