--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     </li>
                     <!--<li class="nav-item">
                         <a href="#about" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#services" class="nav-link">Services</a>
                     </li>-->
+                    <li class="nav-item">
+                        <a href="#services" class="nav-link">Bundles</a>
+                    </li>
                     <li class="nav-item">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" class="nav-link">Ask</a>
                     </li>
@@ -154,6 +154,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
