--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a>
                     <!--<a href="" class="button">test</a>-->
                 </span>
-                            <p class="text"><a href="#services" class="about-section"><br><br>Learn More<br>&darr;</a>
+                            <p class="text"><a href="#services" class="about-detail"><br>Learn More<br>&darr;</a>
                         </p>
                         
                     </div>
@@ -154,6 +154,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
