--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
                                 <br>
                                 <a>&#9634; zqdsdsqd</a> -->                               
                             </span>
+<div class="input-group margin-bottom-sm">
+  <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+  <input class="form-control" type="text" placeholder="Email address">
+</div>
+<div class="input-group">
+  <input class="form-control" type="password" placeholder="Description">
+</div>
+<div class="btn-group open">
+  <a class="btn btn-primary" href="#"> Submit</a>
+</div>
                     </div>
                     <div class="about-image-wrapper">
                         <img src="ressources/bechers.jpg" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
@@ -154,6 +164,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
