--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                            Designing robust clinical trials with clear protocols to ensure international
                             regulatory compliance and scientific validity.
                         </p>
-                        <br>
+                        <!--<br>
                             <span>
                                 <a>&#x2705; time</a> 
                                 <br>
                                 <a>&#x2705; cost</a>
                                 <br>
-                                <a>&#x2705; quality</a> <!-- https://www.w3schools.com/charsets/ref_utf_misc_symb_arr.asp
+                                <a>&#x2705; quality</a>  https://www.w3schools.com/charsets/ref_utf_misc_symb_arr.asp
                                 <br>
                                 <a>&#11034; zqdsdsqd</a> 
                                 <br>
@@ -106,7 +106,7 @@
                                 <br>
                                 <a>&#9314; zqdsdsqd</a>
                                 <br>
-                                <a>&#9634; zqdsdsqd</a> -->                               
+                                <a>&#9634; zqdsdsqd</a>                               
                             </span>
 <div class="input-group margin-bottom-sm">
   <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
@@ -117,7 +117,7 @@
 </div>
 <div class="btn-group open">
   <a class="btn btn-primary" href="#"> Submit</a>
-</div>
+</div> -->
                     </div>
                     <div class="about-image-wrapper">
                         <img src="ressources/bechers.jpg" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
@@ -164,6 +164,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
