--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     <section style="padding: 24px 24px 24px 24px;text-transform: uppercase;font-size: 2rem;">
-        <a href="index.html" class="section-title"> &larr; Back</a>
+        <a href="index.html" class="section-title" style="vertical-align: baseline;color:#3b3737;text-decoration: none;"> &larr; Back</a>
     </section>
     <section class="about-section">
         <div class="section-content">
