--- a/index.html
+++ b/index.html
@@ -143,29 +143,30 @@
                     </div>
                 </div>
             </section>
-   <section id="Form" class="about-section">         
-<div class="container">
-<form action="https://api.web3forms.com/submit" method="POST">
-
-    <!-- Replace with your Access Key -->
-    <input type="hidden" name="access_key" value=" 9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5">
-
-    <!-- Form Inputs. Each input must have a name="" attribute -->
-    <input type="text" name="Name" required>
-    <input type="email" name="email" required>
-    <textarea name="Message" required></textarea>
-
-    <!-- Honeypot Spam Protection -->
-    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-
-    <!-- Custom Confirmation / Success Page -->
-    <!-- <input type="hidden" name="redirect" value="https://mywebsite.com/thanks.html"> -->
-
-    <button type="submit">Submit Form</button>
-
-</form>
-</div>
-   </section>
+            <section id="Form" class="about-section">         
+              <div class="section-content">
+                <div class="about-details">
+                  <h2 class="section-title">Contact Form</h2>
+                  <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
+                    <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5">
+                    <div class="form-group">
+                      <label for="name">Name</label>
+                      <input type="text" id="name" name="Name" required>
+                    </div>
+                    <div class="form-group">
+                      <label for="email">Email</label>
+                      <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                      <label for="message">Message</label>
+                      <textarea id="message" name="Message" rows="5" required></textarea>
+                    </div>
+                    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+                    <button type="submit" class="button">Submit</button>
+                  </form>
+                </div>
+              </div>
+            </section>
         </main>
         <footer class="footer">
             <section class="footer-section">
@@ -187,6 +188,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
