--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <li class="nav-item">
                         <a href="#services" class="nav-link">Bundles</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="nav-link">Ask</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
@@ -59,8 +59,7 @@
                             in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
                             and successful trial outcomes.
                         </p><span class="buttons">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a>
-                    <!--<a href="" class="button">test</a>-->
+                    <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a> -->
                 </span>
                             <p class="text"><a href="#services" class="about-detail" style="color:#3b3737;text-decoration: none;"><br>Learn More<br>&darr;</a>
                         </p>
@@ -181,6 +180,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
